fix jumbotron margin on mobile

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -8,6 +8,10 @@
 body {
   background-color: #fff !important; }
 
+.jumbotron .container form .form-row {
+  margin-left: 0px;
+  margin-right: 0px; }
+
 .alert p {
   margin: 0; }
 
@@ -40,6 +44,10 @@ body {
 
 .review-link:hover {
   text-decoration: none; }
+
+@media (max-width: 768px) {
+  .jumbotron .container form .form-row div {
+    margin: 0 0 16px 0 !important; } }
 
 @media (max-width: 992px) {
   .show-remove-list {
